# aws-sandbox

./: .gitignore  .terraform-version  .tool-versions  README.md  aws-nuke.yaml  buildspec.yaml  buildspec.yml  main.tf  provider.tf
terraform/: .terraform.lock.hcl  cloudwatchevent.tf  codebuild.tf  locals.tf  main.tf  nuke.tf  provider.tf  versions.tf
terraform/accounts/devops-pairing/: main.tf
terraform/accounts/devops-pairing/bootstrap/: main.tf  provider.tf
terraform/accounts/playground/: .terraform.lock.hcl  main.tf  plan
terraform/accounts/playground/bootstrap/: provider.tf
terraform/bootstrap/: .terraform.lock.hcl  main.tf  provider.tf
terraform/modules/nuke_pipeline/: .gitignore  cloudwatchevent.tf  codebuild.tf  locals.tf  notifications.tf  variables.tf
terraform/modules/nuke_pipeline/notify_slack_lambda/: .gitignore  README.md  pyproject.toml
terraform/modules/nuke_pipeline/notify_slack_lambda/src/: functions.py  main.py
terraform/modules/nuke_pipeline/notify_slack_lambda/tests/: conftest.py  test_functions.py  test_main.py
terraform/modules/nuke_pipeline/templates/: buildspec.yaml.tpl
